src/SdlSharp.ImGui.Native/dear_bindings/dcimgui.h


typedef struct ImVec2_t ImVec2;
typedef struct ImVec4_t ImVec4;
typedef unsigned int ImU32;        
typedef struct ImDrawList_t ImDrawList;                              
typedef struct ImFont_t ImFont;                                      
typedef struct ImFontBaked_t ImFontBaked;                            
typedef struct ImGuiStyle_t ImGuiStyle;                                        
typedef int ImGuiCol;             
typedef int ImGuiStyleVar;        
typedef int ImGuiItemFlags;         
struct ImVec4_t
{
    float x, y, z, w;
};
CIMGUI_API void         ImGui_PushFontFloat(ImFont* font, float font_size_base_unscaled);  
CIMGUI_API void         ImGui_PopFont(void);
CIMGUI_API ImFont*      ImGui_GetFont(void);                                               
CIMGUI_API float        ImGui_GetFontSize(void);                                           
CIMGUI_API ImFontBaked* ImGui_GetFontBaked(void);                                          
CIMGUI_API void ImGui_PushStyleColor(ImGuiCol idx, ImU32 col);            
CIMGUI_API void ImGui_PushStyleColorImVec4(ImGuiCol idx, ImVec4 col);
CIMGUI_API void ImGui_PopStyleColorEx(int count );
CIMGUI_API void ImGui_PushStyleVar(ImGuiStyleVar idx, float val);         
CIMGUI_API void ImGui_PushStyleVarImVec2(ImGuiStyleVar idx, ImVec2 val);  
CIMGUI_API void ImGui_PushStyleVarX(ImGuiStyleVar idx, float val_x);      
CIMGUI_API void ImGui_PushStyleVarY(ImGuiStyleVar idx, float val_y);      
CIMGUI_API void ImGui_PopStyleVarEx(int count );
CIMGUI_API void ImGui_PushItemFlag(ImGuiItemFlags option, bool enabled);  
CIMGUI_API void ImGui_PopItemFlag(void);
CIMGUI_API void  ImGui_PushItemWidth(float item_width);                       
CIMGUI_API void  ImGui_PopItemWidth(void);
CIMGUI_API void  ImGui_SetNextItemWidth(float item_width);                    
CIMGUI_API float ImGui_CalcItemWidth(void);                                   
CIMGUI_API void  ImGui_PushTextWrapPos(float wrap_local_pos_x );  
CIMGUI_API void  ImGui_PopTextWrapPos(void);
CIMGUI_API ImVec2        ImGui_GetFontTexUvWhitePixel(void);                                 
CIMGUI_API ImU32         ImGui_GetColorU32Ex(ImGuiCol idx, float alpha_mul );    
CIMGUI_API ImU32         ImGui_GetColorU32ImVec4(ImVec4 col);                                
CIMGUI_API ImU32         ImGui_GetColorU32ImU32Ex(ImU32 col, float alpha_mul );  
CIMGUI_API const ImVec4* ImGui_GetStyleColorVec4(ImGuiCol idx);                              
CIMGUI_API ImVec2 ImGui_GetCursorScreenPos(void);        
CIMGUI_API void   ImGui_SetCursorScreenPos(ImVec2 pos);  
CIMGUI_API ImVec2 ImGui_GetContentRegionAvail(void);     
CIMGUI_API ImVec2 ImGui_GetCursorPos(void);              
CIMGUI_API float  ImGui_GetCursorPosX(void);             
CIMGUI_API float  ImGui_GetCursorPosY(void);             
CIMGUI_API void   ImGui_SetCursorPos(ImVec2 local_pos);  
CIMGUI_API void   ImGui_SetCursorPosX(float local_x);    
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);      
CIMGUI_API void ImGui_PlotLinesCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);  
CIMGUI_API void ImGui_PlotHistogramCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
typedef enum
{
    ImGuiItemFlags_None              = 0,     
    ImGuiItemFlags_NoTabStop         = 1<<0,  
    ImGuiItemFlags_NoNav             = 1<<1,  
    ImGuiItemFlags_NoNavDefaultFocus = 1<<2,  
    ImGuiItemFlags_ButtonRepeat      = 1<<3,  
    ImGuiItemFlags_AutoClosePopups   = 1<<4,  
    ImGuiItemFlags_AllowDuplicateId  = 1<<5,  
} ImGuiItemFlags_;
struct ImDrawList_t
{
    ImVector_ImDrawCmd    CmdBuffer;          
    ImVector_ImDrawIdx    IdxBuffer;          
    ImVector_ImDrawVert   VtxBuffer;          
    ImDrawListFlags       Flags;              
    unsigned int          _VtxCurrentIdx;     
    ImDrawListSharedData* _Data;              
    ImDrawVert*           _VtxWritePtr;       
    ImDrawIdx*            _IdxWritePtr;       
    ImVector_ImVec2       _Path;              
    ImDrawCmdHeader       _CmdHeader;         
    ImDrawListSplitter    _Splitter;          
    ImVector_ImVec4       _ClipRectStack;     
    ImVector_ImTextureRef _TextureStack;      
    ImVector_ImU8         _CallbacksDataBuf;  
    float                 _FringeScale;       
    const char*           _OwnerName;         
};
struct ImFontBaked_t
{
    ImVector_float       IndexAdvanceX;             
    float                FallbackAdvanceX;          
    float                Size;                      
    float                RasterizerDensity;         
    ImVector_ImU16       IndexLookup;               
    ImVector_ImFontGlyph Glyphs;                    
    int                  FallbackGlyphIndex;        
    float                Ascent, Descent;           
    unsigned int         MetricsTotalSurface : 26;  
    unsigned int         WantDestroy : 1;           
    unsigned int         LoadNoFallback : 1;        
    unsigned int         LoadNoRenderOnLayout : 1;  
    int                  LastUsedFrame;             
    ImGuiID              BakedId;                   
    ImFont*              OwnerFont;                 
    void*                FontLoaderDatas;           
};
struct ImFont_t
{
    ImFontBaked*             LastBaked;                                             
    ImFontAtlas*             OwnerAtlas;                                            
    ImFontFlags              Flags;                                                 
    float                    CurrentRasterizerDensity;                              
    ImGuiID                  FontId;                                                
    float                    LegacySize;                                            
    ImVector_ImFontConfigPtr Sources;                                               
    ImWchar                  EllipsisChar;                                          
    ImWchar                  FallbackChar;                                          
    ImU8                     Used8kPagesMap[(IM_UNICODE_CODEPOINT_MAX +1)/8192/8];  
    bool                     EllipsisAutoBake;                                      
    ImGuiStorage             RemapPairs;                                            
#ifndef IMGUI_DISABLE_OBSOLETE_FUNCTIONS
    float                    Scale;                                                 
#endif 
};
CIMGUI_API bool   ImGui_ComboObsolete(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count); 
CIMGUI_API bool   ImGui_ComboObsoleteEx(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count, int popup_max_height_in_items );
CIMGUI_API bool   ImGui_ListBoxObsolete(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count); 
CIMGUI_API bool   ImGui_ListBoxObsoleteEx(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count, int height_in_items );