src/Sdl3Sharp.ImGui/Native/ImGui.cs


    /// <summary>
    /// Parameters stacks (font)
    /// - PushFont(font, 0.0f)                       // Change font and keep current size
    /// - PushFont(NULL, 20.0f)                      // Keep font and change current size
    /// - PushFont(font, 20.0f)                      // Change font and set size to 20.0f
    /// - PushFont(font, style.FontSizeBase * 2.0f)  // Change font and set size to be twice bigger than current size.
    /// - PushFont(font, font-&gt;LegacySize)           // Change font and set size to size passed to AddFontXXX() function. Same as pre-1.92 behavior.
    /// *IMPORTANT* before 1.92, fonts had a single size. They can now be dynamically be adjusted.
    /// - In 1.92 we have REMOVED the single parameter version of PushFont() because it seems like the easiest way to provide an error-proof transition.
    /// - PushFont(font) before 1.92 = PushFont(font, font-&gt;LegacySize) after 1.92          // Use default font size as passed to AddFontXXX() function.
    /// *IMPORTANT* global scale factors are applied over the provided size.
    /// - Global scale factors are: 'style.FontScaleMain', 'style.FontScaleDpi' and maybe more.
    /// -  If you want to apply a factor to the _current_ font size:
    /// - CORRECT:   PushFont(NULL, style.FontSizeBase)         // use current unscaled size    == does nothing
    /// - CORRECT:   PushFont(NULL, style.FontSizeBase * 2.0f)  // use current unscaled size x2 == make text twice bigger
    /// - INCORRECT: PushFont(NULL, GetFontSize())              // INCORRECT! using size after global factors already applied == GLOBAL SCALING FACTORS WILL APPLY TWICE!
    /// - INCORRECT: PushFont(NULL, GetFontSize() * 2.0f)       // INCORRECT! using size after global factors already applied == GLOBAL SCALING FACTORS WILL APPLY TWICE!
    /// Use NULL as a shortcut to keep current font. Use 0.0f to keep current size.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_PushFontFloat")]
    public static partial void PushFontFloat(ImFont* font, float font_size_base_unscaled);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_PopFont")]
    public static partial void PopFont();

    /// <summary>
    /// get current font
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_GetFont")]
    public static partial ImFont* GetFont();

    /// <summary>
    /// get current scaled font size (= height in pixels). AFTER global scale factors applied. *IMPORTANT* DO NOT PASS THIS VALUE TO PushFont()! Use ImGui::GetStyle().FontSizeBase to get value before global scale factors.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_GetFontSize")]
    public static partial float GetFontSize();

    /// <summary>
    /// get current font bound at current size // == GetFont()-&gt;GetFontBaked(GetFontSize())
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_GetFontBaked")]
    public static partial ImFontBaked* GetFontBaked();

    #endregion

    #region Parameters stacks (shared)

    /// <summary>
    /// Parameters stacks (shared)
    /// modify a style color. always use this if you modify the style after NewFrame().
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_PushStyleColor")]
    public static partial void PushStyleColor(ImGuiCol idx, uint col);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_PushStyleColorImVec4")]
    public static partial void PushStyleColorImVec4(ImGuiCol idx, ImVec4 col);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_PopStyleColorEx")]
    public static partial void PopStyleColorEx(int count);

    /// <summary>
    /// modify a style float variable. always use this if you modify the style after NewFrame()!
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_PushStyleVar")]
    public static partial void PushStyleVar(ImGuiStyleVar idx, float val);

    /// <summary>
    /// modify a style ImVec2 variable. "
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_PushStyleVarImVec2")]
    public static partial void PushStyleVarImVec2(ImGuiStyleVar idx, ImVec2 val);

    /// <summary>
    /// modify X component of a style ImVec2 variable. "
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_PushStyleVarX")]
    public static partial void PushStyleVarX(ImGuiStyleVar idx, float val_x);

    /// <summary>
    /// modify Y component of a style ImVec2 variable. "
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_PushStyleVarY")]
    public static partial void PushStyleVarY(ImGuiStyleVar idx, float val_y);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_PopStyleVarEx")]
    public static partial void PopStyleVarEx(int count);

    /// <summary>
    /// modify specified shared item flag, e.g. PushItemFlag(ImGuiItemFlags_NoTabStop, true)
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_PushItemFlag")]
    public static partial void PushItemFlag(ImGuiItemFlags option, [MarshalAs(UnmanagedType.U1)] bool enabled);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_PopItemFlag")]
    public static partial void PopItemFlag();

    #endregion

    #region Parameters stacks (current window)

    /// <summary>
    /// Parameters stacks (current window)
    /// push width of items for common large "item+label" widgets. &gt;0.0f: width in pixels, &lt;0.0f align xx pixels to the right of window (so -FLT_MIN always align width to the right side).
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_PushItemWidth")]
    public static partial void PushItemWidth(float item_width);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_PopItemWidth")]
    public static partial void PopItemWidth();

    /// <summary>
    /// set width of the _next_ common large "item+label" widget. &gt;0.0f: width in pixels, &lt;0.0f align xx pixels to the right of window (so -FLT_MIN always align width to the right side)
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetNextItemWidth")]
    public static partial void SetNextItemWidth(float item_width);

    /// <summary>
    /// width of item given pushed settings and current cursor position. NOT necessarily the width of last item unlike most 'Item' functions.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_CalcItemWidth")]
    public static partial float CalcItemWidth();

    /// <summary>
    /// push word-wrapping position for Text*() commands. &lt; 0.0f: no wrapping; 0.0f: wrap to end of window (or column); &gt; 0.0f: wrap at 'wrap_pos_x' position in window local space
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_PushTextWrapPos")]
    public static partial void PushTextWrapPos(float wrap_local_pos_x);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_PopTextWrapPos")]
    public static partial void PopTextWrapPos();

    #endregion

    #region Style read access

    /// <summary>
    /// Style read access
    /// - Use the ShowStyleEditor() function to interactively see/edit the colors.
    /// get UV coordinate for a white pixel, useful to draw custom shapes via the ImDrawList API
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_GetFontTexUvWhitePixel")]
    public static partial ImVec2 GetFontTexUvWhitePixel();

    /// <summary>
    /// retrieve given style color with style alpha applied and optional extra alpha multiplier, packed as a 32-bit value suitable for ImDrawList
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_GetColorU32Ex")]
    public static partial uint GetColorU32Ex(ImGuiCol idx, float alpha_mul);

    /// <summary>
    /// retrieve given color with style alpha applied, packed as a 32-bit value suitable for ImDrawList
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_GetColorU32ImVec4")]
    public static partial uint GetColorU32ImVec4(ImVec4 col);

    /// <summary>
    /// retrieve given color with style alpha applied, packed as a 32-bit value suitable for ImDrawList
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_GetColorU32ImU32Ex")]
    public static partial uint GetColorU32ImU32Ex(uint col, float alpha_mul);

    /// <summary>
    /// retrieve style color as stored in ImGuiStyle structure. use to feed back into PushStyleColor(), otherwise use GetColorU32() to get style color with style alpha baked in.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_GetStyleColorVec4")]
    public static partial ImVec4* GetStyleColorVec4(ImGuiCol idx);

    #endregion

    #region Layout cursor positioning

    /// <summary>
    /// Layout cursor positioning
    /// - By "cursor" we mean the current output position.
    /// - The typical widget behavior is to output themselves at the current cursor position, then move the cursor one line down.
    /// - You can call SameLine() between widgets to undo the last carriage return and output at the right of the preceding widget.
    /// - YOU CAN DO 99% OF WHAT YOU NEED WITH ONLY GetCursorScreenPos() and GetContentRegionAvail().
    /// - Attention! We currently have inconsistencies between window-local and absolute positions we will aim to fix with future API:
    /// - Absolute coordinate:        GetCursorScreenPos(), SetCursorScreenPos(), all ImDrawList:: functions. -&gt; this is the preferred way forward.
    /// - Window-local coordinates:   SameLine(offset), GetCursorPos(), SetCursorPos(), GetCursorStartPos(), PushTextWrapPos()
    /// - Window-local coordinates:   GetContentRegionMax(), GetWindowContentRegionMin(), GetWindowContentRegionMax() --&gt; all obsoleted. YOU DON'T NEED THEM.
    /// - GetCursorScreenPos() = GetCursorPos() + GetWindowPos(). GetWindowPos() is almost only ever useful to convert from window-local to absolute coordinates. Try not to use it.
    /// cursor position, absolute coordinates. THIS IS YOUR BEST FRIEND (prefer using this rather than GetCursorPos(), also more useful to work with ImDrawList API).
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_GetCursorScreenPos")]
    public static partial ImVec2 GetCursorScreenPos();

    /// <summary>
    /// cursor position, absolute coordinates. THIS IS YOUR BEST FRIEND.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetCursorScreenPos")]
    public static partial void SetCursorScreenPos(ImVec2 pos);

    /// <summary>
    /// available space from current position. THIS IS YOUR BEST FRIEND.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_GetContentRegionAvail")]
    public static partial ImVec2 GetContentRegionAvail();

    /// <summary>
    /// [window-local] cursor position in window-local coordinates. This is not your best friend.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_GetCursorPos")]
    public static partial ImVec2 GetCursorPos();

    /// <summary>
    /// [window-local] "
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_GetCursorPosX")]
    public static partial float GetCursorPosX();

    /// <summary>
    /// [window-local] "
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_GetCursorPosY")]
    public static partial float GetCursorPosY();

    /// <summary>
    /// [window-local] "
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetCursorPos")]
    public static partial void SetCursorPos(ImVec2 local_pos);

    /// <summary>
    /// [window-local] "
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetCursorPosX")]
    public static partial void SetCursorPosX(float local_x);
